--- a/backend/backend/.env.origin
+++ b/backend/backend/.env.origin
@@ -1,6 +1,6 @@
-DB_HOST = localhost
-DB_USER = root
-DB_PASSWORD = 
+DB_HOST = 127.0.0.1
+DB_USER = skygod
+DB_PASSWORD = 'frbJX2<:'
 DB_DATABASE = nft_market
 
 APP_URL = 'http://ec2-3-144-25-242.us-east-2.compute.amazonaws.com'
